<resources>
    <string name="app_name">Bliss Football</string>
    <string name="title_home">Home</string>
    <string name="title_club">Club Football</string>
    <string name="title_international">International Football</string>
    <string name="legends">Know Your Legends</string>
    <string name="coaches">Know Your Coaches</string>
    <string name="todo2">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="title_activity_legends">Legends</string>
    <string name="epl">English Premier League</string>
    <string name="laliga">La Liga</string>
    <string name="seriea">Serie A</string>
    <string name="ligue1">Ligue 1</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="uefa">Union of European Football Associations</string>
    <string name="concacaf">The Confederation of North, Central American and Caribbean Association Football</string>
    <string name="uefa1">UEFA</string>
    <string name="conmebol1">CONMEBOL</string>
    <string name="concacaf1">CONCACAF</string>
    <string name="epl1">EPL</string>
    <string name="coaches1">Coaches</string>
    <string name="legends1">Legends</string>
    <string name="Trophies">TROPHIES</string>
    <string name="News">LATEST NEWS</string>
    <string name="info">Basic Info!!</string>
    <string name="q0">The important thing about football is that its not just about football.</string>
    <string name="q1">The more difficult the victory, the greater the happiness in winning.</string>
    <string name="q2">When people succeed, it is because of hardwork. Luck has nothing to do with it.</string>
    <string name="q3">The first 90 minutes determine the outcome of the game.</string>
    <string name="q4">In football the worst blindness is only seeing the ball.</string>
    <string name="countriesUEFA">Countries Associated with UEFA</string>
    <string name="countriesCONMEBOL">Countries Associated with CONMEBOL</string>
    <string name="countriesCONCACAF">Countries Associated with CONCACAF</string>
    <string name="austriaDescription">The Austria national football team (German: Österreichische Fußballnationalmannschaft) is the association football team that represents Austria in international competition and is controlled by the Austrian Football Association (German: Österreichischer Fußballbund). Austria has qualified for seven FIFA World Cups, most recently in 1998. The country played in the UEFA European Championship
        for the first time in 2008, when it co-hosted the event with Switzerland, and most recently qualified in 2016.</string>
    <string name="canadaDescription">The Canada men\'s national soccer team (French: Équipe du Canada de soccer masculin) represents Canada in international soccer competitions at
        the senior men\'s level officially since 1924. They are overseen by the Canadian Soccer Association and compete in the Confederation of North
        , Central American and Caribbean Association Football (CONCACAF).Their most significant achievements are winning the 1985 CONCACAF
        Championship to qualify for the 1986 FIFA World Cup[4] and winning the 2000 CONCACAF Gold Cup to qualify for the 2001 FIFA Confederations Cup.[5] Canada is the only national team to win a Gold Cup aside from regional powerhouses Mexico and the United States.[6] Canada also won a gold medal in the 1904 Summer Olympics.[7] The 1986 World Cup was their only successful qualification campaign in their history.</string>
    <string name="belgiumDescription">The Belgian national football team[C] has officially represented Belgium in association football since their maiden match in 1904. The squad is under the global jurisdiction of FIFA and is governed in Europe by UEFA—both of which were co-founded by the Belgian team\'s supervising body, the Royal Belgian Football Association (RBFA). Periods of regular Belgian representation at the highest international level, from 1920 to 1938, from 1982 to 2002 and again from 2014 onwards, have alternated with mostly unsuccessful qualification rounds. Most of Belgium\'s home matches are played at the King Baudouin Stadium in Brussels.

Belgium\'s national team have participated in three quadrennial major football competitions. It appeared in the end stages of thirteen FIFA World Cups and five UEFA European Championships, and featured at three Olympic football tournaments, including the 1920 Olympic tournament which they won. Other notable performances are victories over four reigning world champions—West Germany, Brazil, Argentina and France—between 1954 and 2002. Belgium has long-standing football rivalries with its Dutch and French counterparts, having played both teams nearly every year from 1905 to 1967. The squad has been known as the Red Devils since 1906; its fan club is named "1895".

During the national player career of forward Paul Van Himst, the most-praised Belgian footballer of the 20th century, Belgium took third place at Euro 1972. After that, they experienced two golden ages with many gifted players. In the first period, which lasted from the 1980s to the early 1990s, the team finished as runners-up at Euro 1980 and fourth in the 1986 World Cup. In the second, under guidance of Marc Wilmots and later Roberto Martínez in the 2010s, Belgium topped the FIFA World Rankings for the first time in November 2015 and finished third at the 2018 World Cup. Belgium currently participates in League A of the first UEFA Nations League edition.</string>
    <string name="franceDescription">The France national football team (French: Équipe de France de football) represents France in international
        football and is controlled by the French Football Federation, also known as FFF, or in French: Fédération française de football.
        The team\'s colours are blue, white and red, and the coq gaulois its symbol. France are colloquially known as Les Bleus (The Blues).
        The French side are the reigning World Cup holders, having won the 2018 FIFA World Cup on 15 July 2018.
        France play home matches at the Stade de France in Saint-Denis, Paris, and their manager is Didier Deschamps.
        They have won two FIFA World Cups, two UEFA European Championships, two FIFA Confederations Cups and one Olympic tournament.
        France experienced much of its success in four major eras: in the 1950s, 1980s, late 1990s/early 2000s, and mid/late 2010s, respectively,
        which resulted in numerous major honours. France was one of the four European teams that participated in the inaugural World Cup in 1930
        and, although having been eliminated in the qualification stage six times, is one of only three teams that have entered every World Cup
        qualifying cycle.In 1958, the team, led by Raymond Kopa and Just Fontaine, finished in third place at the FIFA World Cup.
        In 1984, France, led by Ballon d\'Or winner Michel Platini, won UEFA Euro 1984 and Football at the 1984 Summer Olympics.
        Under the captaincy of Didier Deschamps and three-time FIFA World Player of the Year Zinedine Zidane, France won the FIFA World Cup in 1998.
        Two years later, the team triumphed at UEFA Euro 2000. France won the FIFA Confederations Cup in 2001 and 2003, and reached the 2006
        FIFA World Cup final, which it lost 5–3 on penalties to Italy. The team also reached the final of UEFA Euro 2016, where they lost 1–0 to
        Portugal in extra time. France won the 2018 FIFA World Cup, defeating Croatia 4–2 in the final match on 15 July 2018.
        This was the second time they had won the tournament after winning it on home soil in 1998.
        France was the first national team that has won the three most important men\'s titles recognized by FIFA: the World Cup, the Confederations Cup, and the Olympic tournament after victory in the Confederations Cup in 2001. Since 2001, Argentina (after the 2004 Olympics) and Brazil (after the 2016 Olympics) are the other two national teams that have won these three titles. They have also won their respective continental championship (Copa América for Argentina and Brazil, and UEFA European Championship for France).</string>
    <string name="germanyDescription">The Germany national football team (German: deutsche Fußballnationalmannschaft or Die Mannschaft) is the men\'s football team that has represented Germany in international competition since 1908.[6] It is governed by the German Football Association (Deutscher Fußball-Bund), founded in 1900.[10][11] Ever since the DFB was reinaugurated in 1949 the team has represented the Federal Republic of Germany. Under Allied occupation and division, two other separate national teams were also recognised by FIFA: the Saarland team representing the Saarland (1950–1956) and the East German team representing the German Democratic Republic (1952–1990). Both have been absorbed along with their records[12][13] by the current national team. The official name and code "Germany FR (FRG)" was shortened to "Germany (GER)" following the reunification in 1990.

Germany is one of the most successful national teams in international competitions, having won four World Cups (1954, 1974, 1990, 2014), three European Championships (1972, 1980, 1996), and one Confederations Cup (2017).[10] They have also been runners-up three times in the European Championships, four times in the World Cup, and a further four third-place finishes at World Cups.[10] East Germany won Olympic Gold in 1976.[14]

Germany is the only nation to have won both the FIFA World Cup and the FIFA Women\'s World Cup.[15][16]

At the end of the 2014 World Cup, Germany earned the highest Elo rating of any national football team in history, with a record 2205 points.[17] Germany is also the only European nation that has won a FIFA World Cup in the Americas. The manager of the national team is Joachim Löw.</string>
    <string name="todo">TODO</string>
</resources>